adding audio assets, worked on css & js for about page, other small tweaks

--- a/src/about.html
+++ b/src/about.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>About</title>
+      <title>T.L. Hine - About</title>
       <meta name="description" content="">
       <meta name="msapplication-tap-highlight" content="yes" />
       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" />
@@ -116,7 +116,7 @@
           <h1>ABOUT</h1>
           <hr>
       </div>
-      <div class="about-filter">
+      <div class="content-filter">
         <a href="javascript:void(0)" class="filter active" data-filter="mix">All</a>
         <a href="javascript:void(0)" class="filter" data-filter="bio">Bio</a>
         <a href="javascript:void(0)" class="filter" data-filter="performance">Performance</a>
