--- a/src/improvisational-and-electro-acoustic-works.html
+++ b/src/improvisational-and-electro-acoustic-works.html
@@ -38,7 +38,6 @@
     <!-- Modernizer & Respond js -->
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
-
 <body>
     <div class="preloader">
         <span class="load"></span>
@@ -112,85 +111,66 @@
             </div>
         </div>
     </div>
+    <!-- Content -->
+
     <div class="container">
-        <div class="content-portfolio">
-            <h1>Instrumental Works</h1>
+      <div class="content-portfolio">
+        <h1>Improvisational & Electro-Acoustic Works</h1>
+        <hr>
+        <br>
+
+        <div class="row">
+          <br><br>
+          <div class="col-md-9">
+            <h4>...5, 6, 7, 8...</h4>
             <hr>
-            <div class="row">
-                <h3>Large Ensembles (6+)</h3>
-                <br><br>
-                <div class="col-md-9">
-                    <h4>...and then it happened...</h4>
-                    <hr>
-                    <div class="content-detail-wrapper">
-                      <audio src="audio/and-then-it-happened-middle.mp3" controls class="content-detail-audio"></audio>
-                      <p>Description, price, and first page</p>
-                    </div>
-
-
-                </div>
-                <div class="col-md-9">
-                    <h4>Nocturne</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
-
-                </div>
-                <div class="col-md-9">
-                    <h4>Mirror Toccatta</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
-
-                </div>
-
-            </div>
-
-            <div class="row">
-                <h3>Small Ensembles & Solos (1 - 6)</h3>
-                <br><br>
-                <div class="col-md-9">
-                    <h4>A Short Meditation on “Guide My Feet” (piano)</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
-                </div>
-                <div class="col-md-9">
-                    <h4>To A Child Dancing in the Wind (high voice & piano)</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
-                </div>
-                <div class="col-md-9">
-                    <h4>Three Miniatures (piano)</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
-                </div>
-                <div class="col-md-9">
-                    <h4>Infinite Regress (saxophone quartet)</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
-                </div>
-                <div class="col-md-9">
-                    <h4>Archetype (piano)</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
-                </div>
-                <div class="col-md-9">
-                    <h4>Bup Bop Bup (bassoon quartet)</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
-                </div>
-                <div class="col-md-9">
-                    <h4>Latitude</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
-                </div>
-                <div class="col-md-9">
-                    <h4>Invocation & Dance</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
-                </div>
-            </div>
+            <p>Description, price, first page</p>
+          </div>
+          <div class="col-md-9">
+            <h4>Armed</h4>
+            <hr>
+            <p>Description, price, first page</p>
+          </div>
+          <div class="col-md-9">
+            <h4>Benedictus</h4>
+            <hr>
+            <p>Description, price, first page</p>
+          </div>
+          <div class="col-md-9">
+            <h4>Lament & Apparition (Call & Response)</h4>
+            <hr>
+            <p>Description, price, first page</p>
+          </div>
+          <div class="col-md-9">
+            <h4>Now We Wake Up With Our Memory</h4>
+            <hr>
+            <p>Description, price, first page</p>
+          </div>
+          <div class="col-md-9">
+            <h4>Plump</h4>
+            <hr>
+            <p>Description, price, first page</p>
+          </div>
+          <div class="col-md-9">
+            <h4>Revelation 17</h4>
+            <hr>
+            <p>Description, price, first page</p>
+          </div>
+          <div class="col-md-9">
+            <h4>Sax Bath</h4>
+            <hr>
+            <p>Description, price, first page</p>
+          </div>
+          <div class="col-md-9">
+            <h4>Swarm</h4>
+            <hr>
+            <p>Description, price, first page</p>
+          </div>
         </div>
-
+      </div>
     </div>
+
+    <!-- Footer -->
     <div class="seperate"></div>
     <footer>
         <div class="container">
@@ -218,6 +198,6 @@
     <script src="js/vendor/owl.carousel.min.js"></script>
     <script src="js/vendor/tabs.js"></script>
     <script src="js/arabella.js"></script>
-</body>
+  </body>
 
 </html>
