--- a/src/media.html
+++ b/src/media.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>About</title>
+      <title>T.L. Hine - Media</title>
       <meta name="description" content="">
       <meta name="msapplication-tap-highlight" content="yes" />
       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" />
@@ -116,6 +116,19 @@
                 <hr>
 
             </div>
+            <h1>Universalist Church Performances</h1>
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe width="1280" height="720" src="https://www.youtube.com/embed/UrPCC9ae3mY" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <hr />
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe width="1280" height="720" src="https://www.youtube.com/embed/KFENd1MRkEM" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <hr />
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe width="1280" height="720" src="https://www.youtube.com/embed/prctGyLQ0wc" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <br />
             <h1>Lituus Duo</h1>
             <div class="embed-responsive embed-responsive-16by9">
               <iframe width="1280" height="720" src="https://www.youtube.com/embed/videoseries?list=PLPSceqINhxSG-dx-B7fhBYsiz1q05Durr" frameborder="0" allowfullscreen></iframe>
@@ -125,7 +138,7 @@
             <div class="embed-responsive embed-responsive-16by9">
               <iframe width="1280" height="720" src="https://www.youtube.com/embed/Z-dINxh5Dpk?list=PLPSceqINhxSEHZXrYVdJ5UiIz7L2Jpe5J" frameborder="0" allowfullscreen></iframe>
             </div>
-                </div>
+          </div>
             </div>
         </div>
 
