--- a/src/services.html
+++ b/src/services.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>T.L. Hine</title>
+        <title>T.L. Hine - Services</title>
         <meta name="description" content="">
         <meta name="msapplication-tap-highlight" content="yes" />
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" />
@@ -145,7 +145,7 @@
                    </div>
                    <div class="col-md-4 col-sm-4 col-xs-12">
                      <ul>
-                         <li>regular (2 – 3 per year) salon concerts at my home</li>
+                         <li>regular (2 – 3 per year) salon concerts</li>
                          <li>a professionally recorded year-end recital</li>
                          <li>the ability to participate in area-wide recitals, festivals, competitons and more through the Hartford Music Teachers Association</li>
                          <li>the opportunity to perform chamber music in small ensembles with other students</li>
@@ -175,12 +175,12 @@
                        </div>
                   </section>
                   <section id="section-flip-3">
-                       <div class="col-md-6 col-sm-6 col-xs-12">
+                       <div class="col-md-4 col-sm-4 col-xs-12">
                         <p>
-                          I received my training as a piano technician through coursework at the Hartt School of Music followed by private, ongoing study with master piano technician, Kenneth Lawhorn. I am currently employed as a part-time piano tuner at the Hartt School, but I maintain a modest private client base in the Greater Hartford area as well. I am currently accepting new clients. Please feel free to <a href="contact.html">contact me</a> for more information or to request a price quote. I am happy to provide the names and contact information of former clients for referral purposes.
+                          I received my training as a piano technician through coursework at the Hartt School of Music followed by private, ongoing study with master piano technician, Kenneth Lawhorn. I am currently employed as a part-time piano tuner at the Hartt School, and I maintain a limited client base in the Greater Hartford area as well. I am currently accepting new clients. Please feel free to <a href="contact.html">contact me</a> for more information or to request a price quote. I am happy to provide the names and contact information of former clients for referral purposes.
                         </p>
                        </div>
-                       <div class="col-md-6 col-sm-6 col-xs-12">
+                       <div class="col-md-4 col-sm-4 col-xs-12">
                             <ul>
                               <li>I service all makes and models</li>
                               <li>Contact me about regular tunings plus standard repairs & adjustments (sticky keys, broken strings, etc.)</li>
@@ -188,24 +188,31 @@
                               <li>I offer competitive rates</li>
                             </ul>
                        </div>
+                       <div class="col-md-4 col-sm-4 col-xs-12">
+                         <img src="img/piano-tuning.JPG" alt="Piano tuning" class="img-responsive">
+                       </div>
                   </section>
                   <section id="section-flip-4">
                       <div class="col-md-6 col-sm-6 col-xs-12">
                         <p>
-                          I specialize in recording live acoustic (i.e. not amplified) concerts in resonant spaces. If you need a high quality audio recording of your performance, I have the equipment and the know-how to create one. I served as an studio engineer at WHRB in Cambridge, MA and I worked part-time as a recording engineer for recitals and concerts at the San Francisco Conservatory of Music. If you need to record a piece for archival or audition purposes, I have access to performances spaces with exceptional acoustics at the Universalist Church where I serve as Director of Music. Please feel free to <a href="contact.html">contact me</a> for more information or to request a price quote. I am happy to provide the names and contact information of former clients for referral purposes.
+                          I specialize in recording live acoustic (i.e. not amplified) concerts in resonant spaces. If you need a high quality audio recording of your performance, I have the equipment and the know-how to create one. I served as an studio engineer at WHRB in Cambridge, MA and I worked part-time as a recording engineer for recitals and concerts at the San Francisco Conservatory of Music. If you need to record a piece for archival or audition purposes, I have access to performance spaces with exceptional acoustics at the Universalist Church where I serve as Director of Music. Please feel free to <a href="contact.html">contact me</a> for more information or to request a price quote. I am happy to provide the names and contact information of former clients for referral purposes.
                         </p>
                        </div>
-
+                      <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img src="img/laptop-with-notebook.jpeg" alt="" class="img-responsive">
+                      </div>
                   </section>
                   <section id="section-flip-5">
-                      <div class="col-md-12 col-sm-12 col-xs-12">
+                      <div class="col-md-6 col-sm-6 col-xs-12">
                           <p>
                             The T. L. Hine jazz trio is a flexible ensemble comprised of engaging, professional Hartford-area musicians; we are available to provide the perfect musical accompaniment to your social event (wedding receptions, gallery openings, private parties, etc.). Choose the core group of saxophone, bass and drums or add/substitute piano and/or guitar to expand/change the timbre. We love to play and we’re always happy to add specific song requests to our repertoire. Please feel free to <a href="contact.html">contact me</a> for more information or to request a price quote.
                           </p>
 
 
                        </div>
-
+                      <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img src="img/jazz-trio.jpg" alt="Jazz Trio" class="img-responsive">
+                      </div>
                   </section>
                 </div><!-- /content -->
               </div><!-- /tabs -->
