--- a/src/works.html
+++ b/src/works.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>T.L. Hine</title>
+    <title>T.L. Hine - Works</title>
     <meta name="description" content="">
     <meta name="msapplication-tap-highlight" content="yes" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" />
@@ -130,12 +130,12 @@
 
         <div class="row">
             <div class="portfolio-wrapper">
-                <div class="works-filter">
+                <div class="content-filter">
                     <a href="javascript:void(0)" class="filter active" data-filter="mix">All</a>
-                    <a href="javascript:void(0)" class="filter" data-filter="instrumental">Instrumental</a>
+                    <a href="javascript:void(0)" class="filter" data-filter="instrumental">Instrumental & Handbells</a>
                     <a href="javascript:void(0)" class="filter" data-filter="choral">Choral</a>
-                    <a href="javascript:void(0)" class="filter" data-filter="handbells">Handbells</a>
-                    <a href="javascript:void(0)" class="filter" data-filter="free">Free</a>
+                    <a href="javascript:void(0)" class="filter" data-filter="improv">Improvisational & Electro-acoustic</a>
+                    <a href="javascript:void(0)" class="filter" data-filter="arrangments">Arrangements</a>
                 </div>
                 <div id="work-grid" class="js-masonry">
                     <!-- Begin of Thumbs Portfolio -->
@@ -316,6 +316,48 @@
                                 </div>
                             </div>
                         </div>
+                     </div>
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
+                         <div class="img masonry-height">
+                             <img src="img/instrumental.jpeg" alt="Portfolio Item">
+                             <div class="hover-overlay">
+                                 <div class="hover-overlay-inner">
+                                     <div class="overlay-view">
+                                         <a href="instrumental-works.html">
+                                             <span class="project-name">Begin</span>
+                                         </a>
+                                     </div>
+                                 </div>
+                             </div>
+                         </div>
+                     </div>
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
+                         <div class="img masonry-height">
+                             <img src="img/instrumental.jpeg" alt="Portfolio Item">
+                             <div class="hover-overlay">
+                                 <div class="hover-overlay-inner">
+                                     <div class="overlay-view">
+                                         <a href="instrumental-works.html">
+                                             <span class="project-name">Prelude</span>
+                                         </a>
+                                     </div>
+                                 </div>
+                             </div>
+                         </div>
+                     </div>
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
+                         <div class="img masonry-height">
+                             <img src="img/instrumental.jpeg" alt="Portfolio Item">
+                             <div class="hover-overlay">
+                                 <div class="hover-overlay-inner">
+                                     <div class="overlay-view">
+                                         <a href="instrumental-works.html">
+                                             <span class="project-name">Quartet</span>
+                                         </a>
+                                     </div>
+                                 </div>
+                             </div>
+                         </div>
                      </div>
                      <!-- Choral works -->
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
@@ -558,11 +600,154 @@
                             </div>
                         </div>
                      </div>
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix choral">
+                        <div class="img masonry-height">
+                            <img src="img/choir.jpg" alt="Portfolio Item">
+                            <div class="hover-overlay">
+                                <div class="hover-overlay-inner">
+                                    <div class="overlay-view">
+                                        <a href="choral-works.html">
+                                            <span class="project-name">Come To Us, Holy Spirit</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                     <!-- Improvisational/Electro-acoustic -->
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix improv">
+                        <div class="img masonry-height">
+                            <img src="img/turntable.jpg" alt="Portfolio Item">
+                            <div class="hover-overlay">
+                                <div class="hover-overlay-inner">
+                                    <div class="overlay-view">
+                                        <a href="improvisational-and-electro-acoustic-works.html">
+                                            <span class="project-name">...5, 6, 7, 8...</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix improv">
+                        <div class="img masonry-height">
+                            <img src="img/turntable.jpg" alt="Portfolio Item">
+                            <div class="hover-overlay">
+                                <div class="hover-overlay-inner">
+                                    <div class="overlay-view">
+                                        <a href="improvisational-and-electro-acoustic-works.html">
+                                            <span class="project-name">Armed</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix improv">
+                        <div class="img masonry-height">
+                            <img src="img/turntable.jpg" alt="Portfolio Item">
+                            <div class="hover-overlay">
+                                <div class="hover-overlay-inner">
+                                    <div class="overlay-view">
+                                        <a href="improvisational-and-electro-acoustic-works.html">
+                                            <span class="project-name">Benedictus</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix improv">
+                        <div class="img masonry-height">
+                            <img src="img/turntable.jpg" alt="Portfolio Item">
+                            <div class="hover-overlay">
+                                <div class="hover-overlay-inner">
+                                    <div class="overlay-view">
+                                        <a href="improvisational-and-electro-acoustic-works.html">
+                                            <span class="project-name">Lament & Apparition (Call & Response)</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix improv">
+                        <div class="img masonry-height">
+                            <img src="img/turntable.jpg" alt="Portfolio Item">
+                            <div class="hover-overlay">
+                                <div class="hover-overlay-inner">
+                                    <div class="overlay-view">
+                                        <a href="improvisational-and-electro-acoustic-works.html">
+                                            <span class="project-name">Now We Wake Up With Our Memory</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix improv">
+                        <div class="img masonry-height">
+                            <img src="img/turntable.jpg" alt="Portfolio Item">
+                            <div class="hover-overlay">
+                                <div class="hover-overlay-inner">
+                                    <div class="overlay-view">
+                                        <a href="improvisational-and-electro-acoustic-works.html">
+                                            <span class="project-name">Plump</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix impov">
+                        <div class="img masonry-height">
+                            <img src="img/turntable.jpg" alt="Portfolio Item">
+                            <div class="hover-overlay">
+                                <div class="hover-overlay-inner">
+                                    <div class="overlay-view">
+                                        <a href="improvisational-and-electro-acoustic-works.html">
+                                            <span class="project-name">Revelation 17</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix improv">
+                        <div class="img masonry-height">
+                            <img src="img/turntable.jpg" alt="Portfolio Item">
+                            <div class="hover-overlay">
+                                <div class="hover-overlay-inner">
+                                    <div class="overlay-view">
+                                        <a href="improvisational-and-electro-acoustic-works.html">
+                                            <span class="project-name">Sax Bath.</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix improv">
+                        <div class="img masonry-height">
+                            <img src="img/turntable.jpg" alt="Portfolio Item">
+                            <div class="hover-overlay">
+                                <div class="hover-overlay-inner">
+                                    <div class="overlay-view">
+                                        <a href="improvisational-and-electro-acoustic-works.html">
+                                            <span class="project-name">Swarm</span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+
+
                      <!-- Need lead sheet arrangments of hymn tunes info -->
                      <!-- Handbells -->
                      <div class="col-md-3 col-sm-3 col-xs-12 mix choir handbells">
                         <div class="img masonry-height">
-                            <img src="img/handbells.jpg" alt="Portfolio Item">
+                            <img src="img/handbells-2.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -576,9 +761,9 @@
                             </div>
                         </div>
                      </div>
-                     <div class="col-md-3 col-sm-3 col-xs-12 mix handbells">
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/handbells.jpg" alt="Portfolio Item">
+                            <img src="img/handbells-2.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -592,9 +777,9 @@
                             </div>
                         </div>
                      </div>
-                     <div class="col-md-3 col-sm-3 col-xs-12 mix handbells">
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/handbells.jpg" alt="Portfolio Item">
+                            <img src="img/handbells-2.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -608,9 +793,9 @@
                             </div>
                         </div>
                      </div>
-                     <div class="col-md-3 col-sm-3 col-xs-12 mix handbells">
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/handbells.jpg" alt="Portfolio Item">
+                            <img src="img/handbells-2.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -624,9 +809,9 @@
                             </div>
                         </div>
                      </div>
-                     <div class="col-md-3 col-sm-3 col-xs-12 mix handbells">
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/handbells.jpg" alt="Portfolio Item">
+                            <img src="img/handbells-2.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -640,9 +825,9 @@
                             </div>
                         </div>
                      </div>
-                     <div class="col-md-3 col-sm-3 col-xs-12 mix handbells">
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/handbells.jpg" alt="Portfolio Item">
+                            <img src="img/handbells-2.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
@@ -656,9 +841,9 @@
                             </div>
                         </div>
                      </div>
-                     <div class="col-md-3 col-sm-3 col-xs-12 mix handbells">
+                     <div class="col-md-3 col-sm-3 col-xs-12 mix instrumental">
                         <div class="img masonry-height">
-                            <img src="img/handbells.jpg" alt="Portfolio Item">
+                            <img src="img/handbells-2.jpg" alt="Portfolio Item">
                             <div class="hover-overlay">
                                 <div class="hover-overlay-inner">
                                     <div class="overlay-view">
